# hri-pick-and-place

./: .gitignore  CONTRIBUTING.en.md  CONTRIBUTING.md  README.en.md  README.md  requirements.txt  카메라_Quest_연결_테스트_절차.md
calibration/: calibrate_cam_to_robot.py  calibrate_stereo.py
config/: .gitkeep
src/hri_bringup/: package.xml  setup.py
src/hri_bringup/launch/: hri_system.launch.py
src/hri_camera/: package.xml  setup.py
src/hri_camera/hri_camera/: camera_node.py
src/hri_control/: package.xml  setup.py
src/hri_control/hri_control/: piper_controller_node.py
src/hri_msgs/: CMakeLists.txt  package.xml
src/hri_msgs/msg/: RobotIntent.msg
src/hri_perception/: package.xml  setup.py
src/hri_perception/hri_perception/: gaze_to_3d_node.py  intent_node.py  model.py
src/hri_quest/: package.xml  setup.py
src/hri_quest/hri_quest/: quest_bridge_node.py  stream_node.py
training/: record_data.py  train.py
unity/: GestureClassifier.cs  QuestSender.cs  VideoReceiver.cs
