<?xml version="1.0"?>
<package format="3">
  <name>hri_bringup</name>
  <version>0.1.0</version>
  <description>HRI system launch</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>
  <exec_depend>hri_camera</exec_depend>
  <exec_depend>hri_quest</exec_depend>
  <exec_depend>hri_perception</exec_depend>
  <exec_depend>hri_control</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
