<?xml version="1.0"?>
<package format="3">
  <name>hri_control</name>
  <version>0.1.0</version>
  <description>HRI pick and place - hri_control</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend><depend>std_msgs</depend><depend>hri_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
