<?xml version="1.0"?>
<package format="3">
  <name>hri_quest</name>
  <version>0.1.0</version>
  <description>HRI pick and place - hri_quest</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend><depend>geometry_msgs</depend><depend>std_msgs</depend><depend>sensor_msgs</depend><depend>cv_bridge</depend>
  <export><build_type>ament_python</build_type></export>
</package>
